// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionController changeCardSelection when the control arg equal to false should update the select state of the item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": true,
    "key": 1,
  },
]
`;

exports[`SelectionController changeCardSelection when the control arg equal to true should update the select state of the item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": false,
    "key": 1,
  },
]
`;

exports[`SelectionController deselectCards should deselect item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": false,
    "key": 1,
  },
]
`;

exports[`SelectionController deselectCardsByIndexes should deselect item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": false,
    "key": 1,
  },
]
`;

exports[`SelectionController selectCards should select item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": true,
    "key": 1,
  },
]
`;

exports[`SelectionController selectCardsByIndexes should select item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "captionTemplate": undefined,
          "dataField": "value",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "index": 0,
    "isSelected": true,
    "key": 1,
  },
]
`;
